--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>HTML Video embed</title>
-   </head>
-   <body>
-      <p>Indranagar Ka Gunda</p>
-      <br />
-      <!-- <iframe width="640" height="360" frameborder="0" src="https://mega.nz/embed/LVRGDJzJ#EjfvJqRvuoEKNCjmaXQ6lYDyzQsFQ-dETFFOjoxQRCk" allowfullscreen ></iframe> -->
-      <iframe src="https://letsupload.io/video/embed/1xfoh/640x320/video.mp4" frameborder="0" scrolling="no" style="width: 640px; height: 320px; overflow: hidden;" allowfullscreen></iframe>
-      </iframe>
-   </body>
+
+<head>
+    <title>SP 926</title>
+    <style>
+        body {
+          background-image: url('moss.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-position: cover;
+        }
+      </style>
+</head>
+
+<Body background="hbd.jpg" ,background-repeat="no-repeat"> <br>
+
+    <body>
+        <center>
+            <h1 style="color:rgb(57, 8, 236);font-size:70px;">HAPPY BIRTHDAY</h1>
+            <h1 style="color:rgb(255, 255, 255);font-size:70px;">SHIRSA</h1>
+            <br />
+            <img src="panda_bday.jpg" width="500" height="600" alt="Photo of three cats">
+            <div class="video"></div>
+            <iframe src="https://drive.google.com/file/d/1E2q7Fu8QNIFwPGm2QLbj2tEP01EFwfP-/preview" width="720" height="480" allow="autoplay"></iframe>
+            </div>
+            </iframe>
+        </center>
+    </body>
+
 </html>
