--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>SP 926</title>
     <style>
         body {
-          background-image: url('moss.jpg');
+          background-image: url('moss2.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-position: cover;
@@ -17,14 +17,21 @@
 
     <body>
         <center>
-            <h1 style="color:rgb(57, 8, 236);font-size:70px;">HAPPY BIRTHDAY</h1>
+            <h1 style="color:rgb(235, 12, 12);font-size:70px;">HAPPY BIRTHDAY</h1>
             <h1 style="color:rgb(255, 255, 255);font-size:70px;">SHIRSA</h1>
             <br />
-            <img src="panda_bday.jpg" width="500" height="600" alt="Photo of three cats">
-            <div class="video"></div>
-            <iframe src="https://drive.google.com/file/d/1E2q7Fu8QNIFwPGm2QLbj2tEP01EFwfP-/preview" width="720" height="480" allow="autoplay"></iframe>
-            </div>
-            </iframe>
+            <img src="panda_bday.jpg" width="500" height="600" >
+            
+        </center>
+    </body>
+
+    <body>
+        <center>
+        <p style="color:rgb(255, 255, 255);font-size:30px;">Happy Birthday to probably the most amazing human I know . </p>
+        <p style="color:rgb(255, 255, 255);font-size:30px;">I will pray that you have the strength and will to fight for your dreams every day. </p>
+        <p style="color:rgb(255, 255, 255);font-size:30px;">People who are a part of your life are blessed.</p>
+        <p style="color:rgb(255, 255, 255);font-size:30px;">I wish, on your next birthday you will be in Japan or UK or US , when you receive someting like this again . Touchwood .</p>
+        <p style="color:rgb(255, 255, 255);font-size:30px;">Have an amazing time tomorrow and for the next year.God bless . Lots of love.</p>
         </center>
     </body>
 
