--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <center>
         <p style="color:rgb(255, 255, 255);font-size:30px;">Happy Birthday to probably the most amazing human I know . </p>
         <p style="color:rgb(255, 255, 255);font-size:30px;">I will pray that you have the strength and will to fight for your dreams every day. </p>
-        <p style="color:rgb(255, 255, 255);font-size:30px;">People who are a part of your life are blessed.</p>
+        <p style="color:rgb(255, 255, 255);font-size:30px;">People who are a part of your life are ...I can't tell how lucky they are</p>
         <p style="color:rgb(255, 255, 255);font-size:30px;">I wish, on your next birthday you will be in Japan or UK or US , when you receive someting like this again . Touchwood .</p>
         <p style="color:rgb(255, 255, 255);font-size:30px;">Have an amazing time tomorrow and for the next year.God bless . Lots of love.</p>
         </center>
