--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
         <center>
         <p style="color:rgb(255, 255, 255);font-size:30px;">Happy Birthday to probably the most amazing human I know . </p>
         <p style="color:rgb(255, 255, 255);font-size:30px;">I will pray that you have the strength and will to fight for your dreams every day. </p>
-        <p style="color:rgb(255, 255, 255);font-size:30px;">People who are a part of your life are ...I can't tell how lucky they are</p>
+        <p style="color:rgb(255, 255, 255);font-size:30px;">People who are a part of your life are ...I can't tell how lucky they are.</p>
         <p style="color:rgb(255, 255, 255);font-size:30px;">I wish, on your next birthday you will be in Japan or UK or US , when you receive someting like this again . Touchwood .</p>
+        <p style="color:rgb(255, 255, 255);font-size:30px;">I might be a bit excited and end up crossing a few lines . Don't be mad . 
+            Give it 15-20 years . Your are sitting in your lab , on a stressful late afternoon .
+            Maybe on the cusp of something that may get you a small Swedish prize. 
+            And this moment pops up in you memory and there is a hint of smile. And you go ,'that guy was such an .... ' "</p>
         <p style="color:rgb(255, 255, 255);font-size:30px;">Have an amazing time tomorrow and for the next year.God bless . Lots of love.</p>
+        <p style="color:rgb(255, 255, 255);font-size:30px;">BTW, if you don't mind there is a small video I made , would you like to see it ? If yes ..</p>
+        <a href="https://drive.google.com/file/d/1E2q7Fu8QNIFwPGm2QLbj2tEP01EFwfP-/view?usp=sharing"> Hit this. </a>  
         </center>
     </body>
 
